ProcessAdminActions.css
div#links {
    margin-left: calc(100% - 250px);
    text-align: right;
    position: relative;
    top: 35px;
    z-index: 5;
}

#ActionsList {
    background: none;
}
#Inputfield_instructions .InputfieldHeader, #Inputfield_instructions .InputfieldContent {
    background: none !important;
}

table.AdminDataList.adminactions td:first-child, table.AdminDataList.adminactions th:first-child {
    width: 20% !important;
}

table.AdminDataList.adminactions td:nth-child(2), table.AdminDataList.adminactions th:nth-child(2) {
    width: 35% !important;
}

table.AdminDataList.adminactions td:nth-child(3), table.AdminDataList.adminactions th:nth-child(3) {
    width: 35% !important;
}

table.AdminDataList.adminactions td:nth-child(4), table.AdminDataList.adminactions th:nth-child(4) {
    width: 10% !important;
}

.adminActionsError, .adminActionsWarning, .adminActionsSuccess {
    width: 100%;
    padding: 10px;
}

.adminActionsError p, .adminActionsWarning p, .adminActionsSuccess p {
    margin: 0;
}

.adminActionsError {
    background: #E92003;
    color: #FFFFFF;
}

.adminActionsWarning {
    background: #FFD15E;
}

.adminActionsSuccess {
    background: #D1F486;
}

.adminActionsAuthor {
    font-size: 13px;
}


#actionCodeViewer {
    height:500px;
    margin: 0;
    position: relative;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

/* Config settings styles */

table.AdminDataList.adminactionsconfig tr.newAction, .AdminDataTable tr.newAction td:first-child {
    background: #FFD15E;
}

table.AdminDataList.adminactionsconfig td:first-child, table.AdminDataList.adminactionsconfig th:first-child {
    width: 20% !important;
    padding-left: 5px;
}

table.AdminDataList.adminactionsconfig td:nth-child(2), table.AdminDataList.adminactionsconfig th:nth-child(2) {
    width: 50% !important;
}

table.AdminDataList.adminactionsconfig td:nth-child(3), table.AdminDataList.adminactionsconfig th:nth-child(3) {
    width: 15% !important;
}

table.AdminDataList.adminactionsconfig td:nth-child(4), table.AdminDataList.adminactionsconfig th:nth-child(4) {
    width: 5% !important;
}

table.AdminDataList.adminactionsconfig td:nth-child(5), table.AdminDataList.adminactionsconfig th:nth-child(5) {
    width: 20% !important;
}

select.rolesSelect {
    width: 100%;
}

/* inline ASM select thanks to @rolandtoth */
table.adminactionsconfig .Inputfield[id^="wrap_"] {
    background: transparent !important;
}
table.adminactionsconfig .InputfieldContent, table.adminactionsconfig label {
    padding: 0.25em 0.25em 0 !important;
    border: none !important;
    background: transparent !important;
}
table.adminactionsconfig .asmList {
    margin-top: 0.25em !important;
}
table.adminactionsconfig .asmListItem {
    padding-left: 8px !important;
    margin-right: 8px;
    display: inline-block !important;
    width: auto !important;
    font-size: 14px;
    background: transparent !important;
    border-color: transparent !important;
    color: inherit !important;
}
table.adminactionsconfig .asmListItem:hover .asmListItemLabel {
    text-decoration: line-through !important;
}
table.adminactionsconfig .asmListItem .asmListItemRemove {
    left: 0 !important;
    right: 0 !important;
    bottom: 0;
    top: 1px;
}
table.adminactionsconfig .asmListItem .asmListItemRemove:not(:hover) i:before {
    content: '\f007';
}
table.adminactionsconfig .asmListItem i {
    margin-left: 2px;
}
table.adminactionsconfig .asmListItem i:not(:hover) {
    color: #EA2262;
}

